[tool.poetry]
name = "qboot"
version = "1.1.2"
description = ""
authors = ["Edgar <doforce@proton.me>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.1"
langchain-groq = "^0.1.4"
gradio = "^4.31.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
